--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,7 @@ body.scroll .navi ul.main {
 
 .navi ul.main li a {
   display: inline-block;
-  color: #26ad6b;
+  color:  #EE6910;
   position: relative;
   overflow: hidden;
   line-height: 1;
@@ -422,7 +422,7 @@ body.scroll .navi ul.main {
   display: block;
   width: 100%;
   height: 2px;
-  background: #26ad6b;
+  background: #EE6910;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -3093,7 +3093,7 @@ a:hover .link_img img {
 
   .navi ul.main li a {
     display: inline-block;
-    color: #26ad6b;
+    color: #EE6910;
     position: relative;
     overflow: hidden;
     line-height: 1;
@@ -3105,7 +3105,7 @@ a:hover .link_img img {
     display: block;
     width: 100%;
     height: 2px;
-    background: #26ad6b;
+    background: #EE6910;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -3126,7 +3126,7 @@ a:hover .link_img img {
     color: #fff;
     width: 120px;
     height: 120px;
-    background: #26ad6b;
+    background: #EE6910;
     border-radius: 50%;
     font-size: 14px;
   }
@@ -3186,7 +3186,7 @@ a:hover .link_img img {
 
   .toggle span:first-child {
     top: 25px;
-    background: #dd775b;
+    background: #1e9ab9;
   }
 
   .toggle span:nth-child(2) {
